# testc

./: .gitignore  build.gradle  config.gradle  error1.txt  error1_parse.txt  error2.txt  error2_parse.txt  settings.gradle
app/: build.gradle  test.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  abi.h  native-lib.cpp  poly1.c  poly1.h
app/src/main/cpp/ctest1/: CMakeLists.txt  Comparator.cpp  Operation.cpp  test1.cpp  test1.h  test11.cpp
app/src/main/cpp/giflib/: .bash_profile
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/example/testc2/: App.java  (+1 more)
app/src/main/res/layout/: activity_cam2.xml  activity_camera_open_gl.xml  activity_encoder1.xml  activity_frag_demo.xml  activity_main.xml  activity_nested_scroll.xml  activity_open_gl1.xml  activity_play2.xml  activity_player1.xml  activity_player_gl.xml  activity_selector.xml  activity_selector2.xml  activity_sps.xml  activity_test_ff1.xml  activity_video_chat.xml  activity_video_chat_receiver.xml  activity_x264.xml  activity_yuv.xml  fragment_blank_fragment1.xml  selector_item.xml  selector_item2.xml  selector_item2p.xml
app/src/main/res/raw/: base_frag.frag  camera_frag.frag  camera_frag1_1.frag  camera_frag1_2.frag  camera_frag4.frag  camera_vert.vert
app/src/main/res/values/: attrs.xml  strings.xml
app/src/test/java/framework/: Memo.java  Runtime1.java
app/testlibs/: app-debug.aar  exampleLib1_patch.aar  lib1-debug.aar
cpp/native1/: build.gradle
cpp/native1/src/main/: AndroidManifest.xml
cpp/native1/src/main/cpp/: CMakeLists.txt  native1-lib.cpp  q1.c  q1.h  test1.c  test1.h
cpp/native1/src/main/cpp/c_tutorial1/: CMakeLists.txt  hello.c  main.c  main1.h  scope_test.c  struct_test.c  t1.c  test_arr.c  test_func.c  test_macr.c  test_mem.c
cpp/native1/src/main/cpp/c_tutorial1/data_lib/: arraylist.c  arraylist.h  sb.c  sb.h  test.c
cpp/native1/src/main/cpp/c_tutorial1/jni_test/: HelloJNI.c  HelloJNI.cpp  HelloJNI.java  HelloJNICpp.c  HelloJNICpp.java  HelloJNICppImpl.cpp  HelloJNICppImpl.h  HelloJNI_p.c  memo
cpp/native1/src/main/cpp/c_tutorial1/leet/: p1791.c
cpp/native1/src/main/cpp/c_tutorial1/maketest/: beginer1  beginer1_clang  beginer1_gcc  beginer3  hellofunc.c  hellomake.c  hellomake.h  memo  mk1.c  mk2.c  t1.c
cpp/native1/src/main/cpp/cpp_1/: memo  memo2  memo3
cpp/native1/src/main/cpp/cpp_1/basic/: C1.cpp  C1.h  C1_1.cpp  b1.cpp  b2.cpp  b3.cpp
cpp/native1/src/main/cpp/ijksdl/: ijksdl_thread.c
cpp/native1/src/main/cpp/ijksdl/android/: ijksdl_android_jni.c  ijksdl_android_jni.h
cpp/native1/src/main/cpp/leet/: c1791.c
cpp/native1/src/main/cpp/p1/: CMakeLists.txt  add.c  div.c  mul.c  p1.h  sub.c
cpp/native1/src/main/res/values/: strings.xml
cpp/nativeapp/: build.gradle
cpp/nativeapp/src/main/: AndroidManifest.xml
cpp/nativeapp/src/main/res/values/: strings.xml
cpplib/: build.gradle
cpplib/src/main/: AndroidManifest.xml
cpplib/src/main/jni/: Android.mk  test1.cpp  test1.h
ext/: .depend  Makefile  config.h  config.mak  hello  libx264.so.161  mac.sh  x264.pc
ext/android/armeabi-v7a/lib/pkgconfig/: x264.pc
gPlugin1/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
jlib/: build.gradle
jlib2modify/: build.gradle
lib1/: build.gradle
lib1/src/main/: AndroidManifest-apk.xml  AndroidManifest.xml
lib1/src/main/res/layout/: activity_dummy_main.xml
lib1modifier/: build.gradle
lib1modifier/original_aar/: lib1-release.aar
lib1modifier/src/main/: AndroidManifest.xml
lib1modifier/src/main/res/values/: strings.xml
ndkcameratest1/: build.gradle
ndkcameratest1/src/main/: AndroidManifest.xml
ndkcameratest1/src/main/cpp/: CMakeLists.txt  android_main.cpp
ndkcameratest1/src/main/cpp/camera2/: CMakeLists.txt  camera_engine.cpp  camera_engine.h  camera_listeners.cpp  camera_manager.cpp  camera_manager.h  camera_ui.cpp  camera_utils.cpp  decoder.cpp  fileWriter.cpp  fileWriter.h  ijksdl_thread.h  image_reader.cpp  image_reader.h  looper.cpp  native_debug.h  util.cpp
ndkcameratest1/src/main/cpp/camera2/threading/: ijksdl_thread.c  thread_demo.c  thread_demo.h
ndkcameratest1/src/main/cpp/camera2/unit/: yuv_fame.h
ndkcameratest1/src/main/res/drawable/: customborder.xml
ndkcameratest1/src/main/res/layout/: activity_main.xml  widgets.xml
ndkcameratest1/src/main/res/values/: strings.xml
performance/chore/: build.gradle
performance/chore/src/main/: AndroidManifest.xml
performance/chore/src/main/res/drawable/: video_item_focus_bg.xml  video_item_focus_sub_bg.xml
performance/chore/src/main/res/layout/: activity_activity.xml  activity_b.xml  activity_inflator.xml  activity_main.xml  activity_rv_test2.xml  activity_rvtest.xml  activity_test_frag.xml  activity_test_hook.xml  activity_test_offset.xml  activity_web_test.xml  fragment_master.xml  fragment_test_fragment1.xml  rv_item1.xml  rv_item2.xml  rv_item3.xml  rv_item_.xml  rv_item_focus.xml
performance/chore/src/main/res/values/: strings.xml
performance/mylibrary/: build.gradle
performance/size/: build.gradle
performance/size/src/main/: AndroidManifest.xml
performance/size/src/main/res/layout/: activity_main.xml  activity_main2.xml
performance/size/src/main/res/values/: styles.xml
performance/uitest/: build.gradle
performance/uitest/src/main/: AndroidManifest.xml
performance/uitest/src/main/res/values/: themes.xml
performance/uitest/src/main/res/values-night/: themes.xml
performance/versions/: build.gradle
performance/versions/src/main/: AndroidManifest.xml
performance/versions/src/main/res/layout/: activity_main.xml
performance/versions/src/main/res/values/: strings.xml
pluginapk1/: build.gradle
pluginapk1/src/main/: AndroidManifest.xml
pluginapk1/src/main/res/layout/: activity_main.xml
pluginapk1/src/main/res/values/: strings.xml
smartcamera/: build.gradle
smartcamera/src/main/: AndroidManifest.xml
smartcamera/src/main/res/layout/: activity_cam2_record.xml  activity_enter.xml  activity_gl_record.xml  activity_main.xml  activity_player.xml
smartcamera/src/main/res/raw/: base_frag.frag  camera_frag1.frag
(+335 files in other folders)
